--- a/python/12_scikit_learn/7. Support Vector Machines.ipynb
+++ b/python/12_scikit_learn/7. Support Vector Machines.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "    shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,11 +284,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.44359863, 3.11530945],\n",
+       "       [2.33812285, 3.43116792],\n",
+       "       [2.06156753, 1.96918596]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.support_vectors_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• A key to this classifier's success is that for the fit, only the position of the support vectors matter;\n",
+    "\n",
+    "• Any points further from the margin which are on the correct side do not modify the fit! Technically, this is because these points do not contribute to the loss function used to fit the model, so their position and number do not matter so long as they do not cross the margin.\n",
+    "\n",
+    "• We can see this, for example, if we plot the model learned from the first 60 points and first 120 points of this dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model"
+    "def plot_svm(N = 10, ax = None):\n",
+    "    X, y = make_blobs(n_samples=200, centers=2,\n",
+    "                     random_state=0, cluster_std=0.60)\n",
+    "    X = X[:N]\n",
+    "    y = y[:N]\n",
+    "    model = SVC(kernel='linear', C=1E10)\n",
+    "    model.fit(X, y)\n",
+    "    \n",
+    "    ax = ax or plt.gca()\n",
+    "    ax.scatter(X[:, 0], y[:, 1], c=y, s=50, cmap = 'autumn')"
    ]
   }
  ],
