--- a/python/12_scikit_learn/6.1. Support Vector Machines.ipynb
+++ b/python/12_scikit_learn/6.1. Support Vector Machines.ipynb
@@ -688,10 +688,19 @@
     "• Their integration with kernel methods makes them very versatile, able to adapt to many types of data.\n",
     "However, SVMs have several disadvantages as well:\n",
     "\n",
-    "• The scaling with the number of samples $N$ is $\\mathcal{O}[N^3]$ at worst, or $\\mathcal{O}[N^2]$ for efficient implementations. For large numbers of training samples, this computational cost can be prohibitive.\n",
-    "The results are strongly dependent on a suitable choice for the softening parameter $C$. This must be carefully chosen via cross-validation, which can be expensive as datasets grow in size.\n",
-    "The results do not have a direct probabilistic interpretation. This can be estimated via an internal cross-validation (see the probability parameter of SVC), but this extra estimation is costly.\n",
-    "With those traits in mind, I generally only turn to SVMs once other simpler, faster, and less tuning-intensive methods have been shown to be insufficient for my needs. Nevertheless, if you have the CPU cycles to commit to training and cross-validating an SVM on your data, the method can lead to excellent results."
+    "• The scaling with the number of samples $N$ is $\\mathcal{O}[N^3]$ at worst, or $\\mathcal{O}[N^2]$ for efficient implementations.\n",
+    "\n",
+    "• For large numbers of training samples, this computational cost can be prohibitive.\n",
+    "\n",
+    "• The results are strongly dependent on a suitable choice for the softening parameter $C$.\n",
+    "\n",
+    "• This must be carefully chosen via cross-validation, which can be expensive as datasets grow in size.\n",
+    "\n",
+    "• The results do not have a direct probabilistic interpretation. This can be estimated via an internal cross-validation (see the probability parameter of SVC), but this extra estimation is costly.\n",
+    "\n",
+    "• With those traits in mind, I generally only turn to SVMs once other simpler, faster, and less tuning-intensive methods have been shown to be insufficient for my needs.\n",
+    "\n",
+    "• Nevertheless, if you have the CPU cycles to commit to training and cross-validating an SVM on your data, the method can lead to excellent results."
    ]
   }
  ],
